ibuilder/tests/not_compile/not_derived.rs
struct Foo {
    field: i64,
}

fn main() {
    Foo::builder();
}
